# Robotics-Project-1

./: README.md
project_1-master/: CMakeLists.txt  Instructions  package.xml
project_1-master/cfg/: integration.cfg
project_1-master/launch/: launcher.launch
project_1-master/msg/: Speed.msg
project_1-master/rviz/: project_1.rviz
project_1-master/src/: AgileXCore.cpp  BaselineCalculator.cpp  GearRatioCalculator.cpp  GlobalSync.cpp  LateralWheelSync.cpp
